--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -18,11 +18,12 @@ body {
     font-family: var(--font-secondary);
     font-weight: 400;
     line-height: 1.6;
+    font-size: var(--text-lg);
 }
 
 .header {
     font-family: var(--font-primary);
-    font-weight: 400;
+    font-size: var(--text-base);
 }
 
 .title {
@@ -36,7 +37,6 @@ body {
     font-weight: 700;
     font-size: 22px;
 }
-
 
 .btn {
     font-family: var(--font-primary);
